Stop setting MaxPermSize.
Ignored on Java 8 which is min required version.

Change-Id: Ib133bdeaccd56512e87958ec18c0865d50a9f8d7
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>